Companion for paritytech/parity-bridges-common#1376 Part 1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -345,3 +345,16 @@ xcm = { git = "https://github.com/paritytech//polkadot", branch = "locked-for-ga
 xcm-builder = { git = "https://github.com/paritytech//polkadot", branch = "locked-for-gav-xcm-v3-and-bridges-2" }
 xcm-executor = { git = "https://github.com/paritytech//polkadot", branch = "locked-for-gav-xcm-v3-and-bridges-2" }
 xcm-procedural = { git = "https://github.com/paritytech//polkadot", branch = "locked-for-gav-xcm-v3-and-bridges-2" }
+
+[patch."https://github.com/darwinia-network/darwinia-messages-substrate"]
+bp-messages            = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+bp-pangolin            = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+bp-pangolin-parachain  = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+bp-polkadot-core       = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+bp-runtime             = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+bp-crab                = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+bp-crab-parachain      = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+bridge-runtime-common  = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+pallet-bridge-grandpa  = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+pallet-bridge-messages = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
+pallet-fee-market      = { git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "guantong-xcm" }
