--- a/Cargo.toml
+++ b/Cargo.toml
@@ -354,3 +354,15 @@ bridge-runtime-common  = { path = "/home/workspace/darwinia-git/darwinia-message
 pallet-bridge-grandpa  = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/modules/grandpa" }
 pallet-bridge-messages = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/modules/messages" }
 pallet-fee-market      = { path = "/home/workspace/darwinia-git/darwinia-messages-substrate/modules/fee-market" }
+
+[patch."https://github.com/paritytech/cumulus"]
+cumulus-pallet-aura-ext         = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+cumulus-pallet-dmp-queue        = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+cumulus-pallet-parachain-system = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+cumulus-pallet-xcm              = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+cumulus-pallet-xcmp-queue       = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+cumulus-primitives-core         = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+cumulus-primitives-timestamp    = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+cumulus-primitives-utility      = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+pallet-collator-selection       = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
+parachain-info                  = { git = "https://github.com/darwinia-patch/cumulus", branch = "gav-xcm-v3" }
