--- a/runtime/common/Cargo.toml
+++ b/runtime/common/Cargo.toml
@@ -19,6 +19,7 @@ smallvec       = { version = "1.9" }
 # cumulus
 pallet-collator-selection = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.27" }
 # darwinia-messages-substrate
+bp-darwinia-core       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.27" }
 bp-messages            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.27" }
 bp-runtime             = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.27" }
 bridge-runtime-common  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-messages-substrate", branch = "polkadot-v0.9.27" }
@@ -53,6 +54,7 @@ std = [
 	# cumulus
 	"pallet-collator-selection/std",
 	# darwinia-messages-substrate
+	"bp-darwinia-core/std",
 	"bp-messages/std",
 	"bp-runtime/std",
 	"bridge-runtime-common/std",
