--- a/runtime/darwinia-parachain/Cargo.toml
+++ b/runtime/darwinia-parachain/Cargo.toml
@@ -12,7 +12,7 @@ version     = "5.3.4"
 
 [dependencies]
 # crates.io
-array-bytes = { version = "4.1", optional = true }
+array-bytes = { version = "4.1" }
 codec       = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
 scale-info  = { version = "2.1", default-features = false, features = ["derive"] }
 smallvec    = { version = "1.9" }
