--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -7,7 +7,7 @@ license     = "GPL-3.0"
 name        = "dc-rpc"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
-version     = "5.3.5"
+version     = "5.3.5-1"
 
 [dependencies]
 # crates.io
