--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license     = "GPL-3.0"
 name        = "darwinia-parachain"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
-version     = "5.3.5-1"
+version     = "5.3.6"
 
 [features]
 alpha = ["pangolin-parachain-runtime/alpha"]
