--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -7,7 +7,7 @@ license     = "GPL-3.0"
 name        = "dc-primitives"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-parachain"
-version     = "5.3.5-1"
+version     = "5.3.6"
 
 [dependencies]
 # substrate
