--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,3 +114,16 @@ members = [
 	"rpc",
 	"runtime/*",
 ]
+
+[patch."https://github.com/paritytech/cumulus"]
+cumulus-pallet-aura-ext         = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+cumulus-pallet-dmp-queue        = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+cumulus-pallet-parachain-system = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+cumulus-pallet-solo-to-para     = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27"}
+cumulus-pallet-xcm              = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+cumulus-pallet-xcmp-queue       = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+cumulus-primitives-core         = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+cumulus-primitives-timestamp    = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+cumulus-primitives-utility      = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+pallet-collator-selection       = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
+parachain-info                  = { git = "https://github.com/parityfork/cumulus", branch = "patch-0.9.27" }
